--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,75 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.alert p {
+  margin-bottom: 0!important;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background: #000428;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #004e92, #000428);  
+  background: linear-gradient(to right, #004e92, #000428); 
+  margin: 0;
+  padding: 0;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+header {
+  margin: 30px 0;
+}
+.contenido {
+  padding:20px;
+}
+.contenido-principal {
+  background-color: white;
+  padding: 30px;
+  border-radius: 20px;
+}
+h1 {
+  font-family:  'Verdana', Geneva, Tahoma, sans-serif;
+  font-weight: 100;
+  color: white;
+  text-align: center;
+  font-size: 4.8rem!important;
+  padding: 4.8rem;
+}
+.campo {
+  margin-bottom: 2rem;
+}
+.error {
+  text-align: center;
+}
+.alert-danger {
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;  
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  border-radius: 10px;
+  font-weight: bolder;
+}
+label{
+  color:white
+}
+.guarderia {
+  padding: 2rem;
+  background: white;
+  border-bottom: 1px solid #e1e1e1;
+  border-radius: 20px;
+  color: black;
+  display: flex;
+  flex-direction: row;
+  gap:6%;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  justify-items: center;
+  
+}
+.eliminar{
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;  
+  text-align: center;
+  border-radius: 10px;
+  font-weight: bolder;
+}
+.eliminar:hover{
+  color: red; 
 }
